syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "MainMsgProtos";

enum EMsgType {
	PmdMsg = 0;//ÅÜÂëµÆ
	OtherMsg = 1;//
	GroupCompetitionMsg = 3; // °ïÕ½µÄ²¥±¨
}

message MainMsgResponse {
   optional int32 id = 1;
   optional EMsgType type = 2;
   optional string info1 = 3;
   optional string info2 = 4;
   optional string info3 = 5;
   optional string info4 = 6;
   optional string info5 = 7;
}

message MainMsgRequest {
	optional int32 id = 1;
	optional EMsgType type = 2;
}
